[markdown-previewer] : fix overflow issues

--- a/front-end-libraries-projects/markdown-previewer/src/styles/md_app.scss
+++ b/front-end-libraries-projects/markdown-previewer/src/styles/md_app.scss
@@ -4,13 +4,16 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  text-rendering: optimizeLegibility;
+  overflow: hidden;
   // background: $bg-gray;
 }
 
 .app--header {
   padding: 1rem;
   font-size: 1.4rem;
-  font-weight: bold;
+  // font-weight: bold;
   color: #ffffff;
   background: $primary-color;
 }
@@ -19,4 +22,9 @@
   flex: 1;
   display: flex;
   margin: .5rem;
+  overflow: auto;
+}
+
+.app-container>* {
+  flex: 1;
 }
