--- a/front-end-libraries-projects/markdown-previewer/src/styles/md_preview.scss
+++ b/front-end-libraries-projects/markdown-previewer/src/styles/md_preview.scss
@@ -3,7 +3,7 @@
 .md-preview-panel {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  overflow: hidden;
 
   .header {
     padding: .25rem;
@@ -12,7 +12,7 @@
     border-top-right-radius: .25rem;
     font-size: 1rem;
     color: white;
-    font-weight: 600;
+    // font-weight: 600;
   }
 
   .view {
@@ -21,7 +21,7 @@
     border: 1px solid $primary-color-light;
     border-bottom-left-radius: .25rem;
     border-bottom-right-radius: .25rem;
-    overflow-y: scroll;
+    overflow: auto;
   }
 
 }
